==> pepe2k/CC3000-SDK/CC3000 SDK/MSP430FR5739/Basic WiFi Application/Basic WiFi Source/Source/CC3000 Spi/spi.c <==
#include "hci.h"
#include "spi.h"
#include "evnt_handler.h"
#include "board.h"
#include <msp430.h>
#define READ                    3
#define WRITE                   1
#define HI(value)               (((value) & 0xFF00) >> 8)
#define LO(value)               ((value) & 0x00FF)
#define ASSERT_CS()          (P1OUT &= ~BIT3)
#define DEASSERT_CS()        (P1OUT |= BIT3)
#define HEADERS_SIZE_EVNT       (SPI_HEADER_SIZE + 5)
#define SPI_HEADER_SIZE			(5)
#define 	eSPI_STATE_POWERUP 				 (0)
#define 	eSPI_STATE_INITIALIZED  		 (1)
#define 	eSPI_STATE_IDLE					 (2)
#define 	eSPI_STATE_WRITE_IRQ	   		 (3)
#define 	eSPI_STATE_WRITE_FIRST_PORTION   (4)
#define 	eSPI_STATE_WRITE_EOT			 (5)
#define 	eSPI_STATE_READ_IRQ				 (6)
#define 	eSPI_STATE_READ_FIRST_PORTION	 (7)
#define 	eSPI_STATE_READ_EOT				 (8)
#define CC3000_BUFFER_MAGIC_NUMBER (0xDE)

int init_spi(void)
{
	// Select the SPI lines: MISO/MOSI on P1.6,7 
	MOSI_MISO_PORT_SEL |= (SPI_MISO_PIN + SPI_MOSI_PIN);
	MOSI_MISO_PORT_SEL2 &= (~(SPI_MISO_PIN + SPI_MOSI_PIN));
	//CLK on P2.2
	SPI_CLK_PORT_SEL |= (SPI_CLK_PIN);
	SPI_CLK_PORT_SEL2 &= ~SPI_CLK_PIN;
	
	UCB0CTLW0 |= UCSWRST;                     // Put state machine in reset
	UCB0CTLW0 |= (UCMST+UCSYNC+UCMSB);      	// 3-pin, 8-bit SPI master
	// Clock polarity high, MSB
	UCB0CTLW0 |= UCSSEL_2;                    // ACLK
	UCB0BR0 = 0x02;                           // /2 change to /1
	UCB0BR1 = 0;                              //
	
	UCB0CTLW0 &= ~UCSWRST;                    //Initialize USCI state machine
	
	return(ESUCCESS);
}

void
SpiWriteDataSynchronous(unsigned char *data, unsigned short size)
{
	while (size)
	{   	
		while (!(TXBufferIsEmpty()));
		UCB0TXBUF = *data;
		while (!(RXBufferIsEmpty()));
		UCB0RXBUF;
		size --;
		data++;
	}
}

__interrupt void IntSpiGPIOHandler(void)
{
	switch(__even_in_range(P2IV,P2IV_P2IFG3))
	{
	case P2IV_P2IFG3:
		if (sSpiInformation.ulSpiState == eSPI_STATE_POWERUP)
		{
			//This means IRQ line was low call a callback of HCI Layer to inform 
			//on event 
	 		sSpiInformation.ulSpiState = eSPI_STATE_INITIALIZED;
		}
		else if (sSpiInformation.ulSpiState == eSPI_STATE_IDLE)
		{
			sSpiInformation.ulSpiState = eSPI_STATE_READ_IRQ;
			
			/* IRQ line goes down - we are start reception */
			ASSERT_CS();
			
			// Wait for TX/RX Compete which will come as DMA interrupt
			SpiReadHeader();
			
			sSpiInformation.ulSpiState = eSPI_STATE_READ_EOT;
			
			SSIContReadOperation();
		}
		else if (sSpiInformation.ulSpiState == eSPI_STATE_WRITE_IRQ)
		{
			SpiWriteDataSynchronous(sSpiInformation.pTxPacket, 
															sSpiInformation.usTxPacketLength);
			
			sSpiInformation.ulSpiState = eSPI_STATE_IDLE;
			
			DEASSERT_CS();
		}
		break;
	default:
		break;
	}
	
}
