==> pepe2k/CC3000-SDK/CC3000 SDK/LM4F232H5QD/Basic WiFi Application/Basic WiFi Source/Source/CC3000 Spi/spi.c <==
#include "hci.h"
#include "spi.h"
#include "inc/hw_types.h"
#include "driverlib/rom.h"
#include "driverlib/rom_map.h"
#include "driverlib/gpio.h"
#include "driverlib/interrupt.h"
#include "driverlib/rom.h"
#include "driverlib/sysctl.h"
#include "driverlib/udma.h"
#include "driverlib/uart.h"
#include "driverlib/ssi.h"
#include "inc/hw_ints.h"
#include "inc/hw_nvic.h"
#include "inc/hw_memmap.h"
#include "inc/hw_types.h"
#include "inc/hw_ssi.h"
#include "inc/hw_uart.h"
#include "spi_version.h"
#define SPI_BASE 					SSI3_BASE
#define SPI_CLK_PIN              	GPIO_PIN_0
#define SPI_RX_PIN               	GPIO_PIN_2
#define SPI_TX_PIN               	GPIO_PIN_3
#define INT_SPI						INT_SSI3
#define SYSCTL_PERIPH_SPI			SYSCTL_PERIPH_SSI3
#define SPI_CLK_MUX_SEL				GPIO_PH0_SSI3CLK
#define SPI_RX_MUX_SEL				GPIO_PH2_SSI3RX
#define SPI_TX_MUX_SEL				GPIO_PH3_SSI3TX
#define SPI_UDMA_RX_CHANNEL 		 UDMA_CH14_SSI3RX
#define SPI_UDMA_TX_CHANNEL			 UDMA_CH15_SSI3TX
#define FWT_DELAY               4000
#define DMA_WINDOW_SIZE         1024
#define SPI_WINDOW_SIZE         DMA_WINDOW_SIZE
#define DMA_CHANNEL_CONTROL_STRUCTURE_SIZE	(512)
#define READ                    3
#define WRITE                   1
#define HI(value)               (((value) & 0xFF00) >> 8)
#define LO(value)               ((value) & 0x00FF)
#define ASSERT_CS()          (MAP_GPIOPinWrite(sSpiInformation.sHwSettings.ulPioSpiPort, sSpiInformation.sHwSettings.ulPioSpiCs, 0))

int init_spi(void)
{
	// Update the configuration in the SPI driver
	SpiConfigureHwMapping();
	
	// Configure SPI with CC3000 
	SSIConfigure(1000000, 1, 50000000);
	return(ESUCCESS);
}

void
SpiWriteDataSynchronous(const unsigned char *data, unsigned short size)
{
	// we are in the SYNC write to SPI - we do not want to receive ANY SSI related
	// interrupts
	MAP_IntDisable(sSpiInformation.sHwSettings.ulSsiPortInt);
	SpiWriteAsync(data, size);
	
	// The last one to finish operation is RX channel since
	// TX is finished before the last bit is on the bus XXX was RX
	while(SSIBusy(SPI_BASE));
	
	// Clear The SSI & DMA Interrupt and enable back SSI
	IntPendClear(INT_SPI);
	IntPendClear(INT_UDMA);
	
	// Enable back SSIO ISR
	MAP_IntEnable(sSpiInformation.sHwSettings.ulSsiPortInt);
}

void
IntSpiGPIOHandler(void)
{
	SpiCleanGPIOISR();
	if(!MAP_GPIOPinRead(SPI_GPIO_IRQ_BASE, SPI_IRQ_PIN))
	{
		if (sSpiInformation.ulSpiState == eSPI_STATE_POWERUP)
		{
			// This means IRQ line was low call a callback of HCI Layer to 
			// inform on event
			sSpiInformation.ulSpiState = eSPI_STATE_INITIALIZED;
		}
		else if (sSpiInformation.ulSpiState == eSPI_STATE_IDLE)
		{
			sSpiInformation.ulSpiState = eSPI_STATE_READ_IRQ;
			
			// IRQ line goes down - we are start reception 
			ASSERT_CS();    
			
			// Wait for TX/RX Compete which will come as DMA interrupt
			SpiReadHeader();
		}
		else if (sSpiInformation.ulSpiState == eSPI_STATE_WRITE_IRQ)
		{
			SpiWriteAsync(sSpiInformation.pTxPacket, sSpiInformation.usTxPacketLength);    
		}
	}
}
